--- a/main.html
+++ b/main.html
@@ -10,7 +10,82 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-1">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-2">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-2">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-2">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-2">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-2">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-2">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-4">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+    <div class="col-sm-4">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <img src="https://plus.unsplash.com/premium_photo-1674676471339-fe57f0056992?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1043&q=80" height="100px" width="100px" />
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
